--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "build-storybook -c .storybook -o .out",
     "deploy:ghpages": "npm run build-storybook  && cp .nojekyll .out/.nojekyll && gh-pages -d .out",
     "build:component": "cross-env BABEL_ENV=production babel src -d dist && /bin/cp -rf package.json dist && /bin/cp -rf README.md dist",
+    "build:transcript-editor": "rollup --config",
     "publish:public": "npm run build:component && npm publish dist --access public",
     "publish:dry:run": "npm run build:component && npm publish  dist --dry-run",
     "lint": "prettier --write \"**/*.js\""
@@ -34,7 +35,13 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-react": "^7.9.4",
+    "@babel/runtime-corejs3": "^7.12.5",
+    "@rollup/plugin-babel": "^5.2.2",
     "@storybook/addon-a11y": "^5.3.18",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-info": "^5.3.18",
@@ -43,6 +50,7 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
     "babel-loader": "^8.1.0",
+    "babel-plugin-react-require": "^3.1.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "bootstrap-css-only": "^4.4.1",
     "cross-env": "^7.0.2",
@@ -52,14 +60,25 @@
     "pretty-quick": "^2.0.1"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.12.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.5",
+    "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "@storybook/addon-storysource": "^5.3.18",
     "align-diarized-text": "^1.0.8",
-    "docx": "4.7.1",
+    "core-js": "^3.6.5",
+    "fp-ts": "^2.9.1",
+    "path-browserify": "^0.0.1",
     "prop-types": "^15.7.2",
     "react-bootstrap": "^1.0.1",
+    "rollup": "^2.35.1",
+    "rollup-plugin-esbuild": "^2.6.1",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sbd": "^1.0.18",
     "slate": "^0.59.0",
     "slate-history": "^0.59.0",
