--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@storybook/addon-storysource": "^5.3.18",
     "align-diarized-text": "^1.0.8",
     "core-js": "^3.6.5",
+    "d3-format": "^2.0.0",
     "fp-ts": "^2.9.1",
     "path-browserify": "^0.0.1",
     "prop-types": "^15.7.2",
