Generate isolated bootstrap styles

--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@storybook/addon-storysource": "^5.3.18",
     "align-diarized-text": "^1.0.8",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "d3-format": "^2.0.0",
     "fp-ts": "^2.9.1",
+    "less": "^4.0.0",
     "path-browserify": "^0.0.1",
+    "postcss": "^8.2.1",
     "prop-types": "^15.7.2",
     "react-bootstrap": "^1.0.1",
     "rollup": "^2.35.1",
